plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id "io.freefair.lombok" version "8.1.0"
}

group 'dev.ag6.passwordmanager'
version '1.0.0'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.controlsfx:controlsfx:11.1.2'
    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'

    implementation 'org.jetbrains:annotations:23.0.0'
    implementation 'io.github.palexdev:materialfx:11.14.0'
    implementation 'com.google.code.gson:gson:2.10.1'

    annotationProcessor 'org.projectlombok:lombok:1.18.26'
    compileOnly 'org.projectlombok:lombok:1.18.26'
}

javafx {
    version = '19'
    modules = ['javafx.controls']
}

jar {
    manifest {
        attributes(
                "Main-Class": "dev.ag6.passwordmanager.Main"
        )
    }
}

application {
    mainClass = 'dev.ag6.passwordmanager.Main'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

sourceCompatibility = JavaVersion.VERSION_19
